--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
     "source.fixAll": "always",
     "source.addMissingImports.ts": "always"
   },
-  "cSpell.words": [
-    "serviceworker"
-  ]
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
