--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:studio": "dotenv -- drizzle-kit studio"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-slot": "^1.2.0",
     "@t3-oss/env-nextjs": "^0.13.4",
     "class-variance-authority": "^0.7.1",
@@ -21,6 +22,7 @@
     "drizzle-orm": "^0.43.1",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
